--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "autoprefixer": "^9.8.0",
+    "body-scroll-lock": "^3.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "shaka-player": "^3.0.1",
     "shaka-player-react": "^1.0.1"
   },
   "scripts": {
